--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "Deep Learning with TensorFlow 2"
+  title: "Deep Learning with TensorFlow 2 (DRAFT)"
   chapters:
     - index.qmd
     - intro.qmd
@@ -37,8 +37,8 @@ bibliography: references.bib
 format:
   html:
     theme: united
-  pdf:
-    documentclass: scrreprt
+  # pdf:
+  #   documentclass: scrreprt
 
 
 
